Apply styling to popup notification

--- a/src/index.css
+++ b/src/index.css
@@ -114,6 +114,25 @@ input {
   padding: 3px 12px;
 }
 
+#notification {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-weight: bold;
+  text-align: center;
+  padding: 1.5rem 2rem;
+  border: 3px solid;
+  background-color: #dcdcdc;
+  box-shadow: 0 0 1rem rgb(0 0 0 / 50%);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+#notification.show {
+  opacity: 1;
+}
+
 @media screen and (max-width: 768px) {
   body {
     padding: 2rem 1.4rem;
